--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -16,14 +16,14 @@
             type="number"
             id="amount"
             class="form-control"
-            #amoutInput>
+            #amountInput>
         </div>
       </div>
       <div class="row">
         <div class="col-xs-12">
           <button class="btn btn-success" type="submit" (click)="onAddItem()">Add</button>
           <button class="btn btn-danger" type="button">Delete</button>
-          <button class="btn btn-primary" type="submit">Clear</button>
+          <button class="btn btn-primary" type="button">Clear</button>
         </div>
       </div>
     </form>
